# Qtic-Qtac-Qtoe

./: README.md
doc/: TODO  notes.txt
src/: CMakeLists.txt  Qtic-Qtac-Qtoe.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settings.ui  tic-tac-toe.cpp  tic-tac-toe.h
